@@ -4,6 +4,9 @@ Changelog
 3.1.2 (unreleased)
 ------------------
 
+- Inbox overview: List only active tasks and forwardings.
+  [phgross]
+
 - Inbox overview: Only list current part of a predecessor/successor couple.
   [phgross]
 
